--- a/Keyboards/LanguageKeyboards/German/Info.plist
+++ b/Keyboards/LanguageKeyboards/German/Info.plist
@@ -29,7 +29,7 @@
 			<key>PrefersRightToLeft</key>
 			<false/>
 			<key>PrimaryLanguage</key>
-			<string> </string>
+			<string>de</string>
 			<key>RequestsOpenAccess</key>
 			<false/>
 		</dict>
