--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -36,4 +36,4 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thank you for your contribution! blush!
+        Thank you for your contribution!
