Remove colon from feature request field description

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -6,7 +6,7 @@ body:
     id: terms
     attributes:
       label: Terms
-      description: By submitting this issue, you agree to the following:
+      description: By submitting this issue, you agree to the following
       options:
         - label: I have searched open and closed issues for duplicates
           required: true
