--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -14,7 +14,7 @@ body:
   - type: textarea
     id: description
     attributes:
-      label: Descriptions
+      label: Description
       description: A brief description of the enhancement you propose.
     validations:
       required: true
