--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,45 +1,39 @@
 name: 🐞 Bug report
-description: Create a bug report to help us improve Scribe-iOS.
-labels: [kind/bug, ]
+description: Report a bug to help us improve Scribe-iOS.
+labels: "bug"
 body:
-- type: checkboxes
-  id: new-bug
-  attributes:
-    label: Is there an existing issue for this?
-    description: Please search to see if an issue already exists for the bug you encountered.
-    options:
-     - label: I have searched the existing issues.
-       required: true
-- type: textarea
-  attributes:
-    label: Behavior
-    placeholder: |
-         A concise description of what you're experiencing?
-         A concise description of what you are expecting to happen?
-  validations:
-    required: true
-
-- type: textarea
-  attributes:
-    label: Steps To Reproduce
-    description: Steps to reproduce the behavior.
-    placeholder: |
-      1. Environment...
-      2. With this config...
-      3. Run '...'
-      4. Error...
-    render: markdown
-  validations:
-    required: false
-
-- type: textarea
-  attributes:
-    label: Anything else?
-    placeholder: |
-       Anything else you like to add?
-  validations:
-    required: false
-- type: markdown
-  attributes:
-    value: |
-      Thanks for taking the time to fill out this bug report!    
+  - type: checkboxes
+    id: new-bug
+    attributes:
+      label: Is there an existing issue for this?
+      options:
+        - label: I have searched all open issues.
+          required: true
+  - type: textarea
+    attributes:
+      label: Behavior
+      placeholder: |
+        A concise description of what you're experiencing and what you expected to happen.
+    validations:
+      required: true
+      body:
+  - type: dropdown
+    id: device
+    attributes:
+      label: Device type
+      options:
+        - iPhone
+        - iPad
+    validations:
+      required: true
+  - type: input
+    id: version
+    attributes:
+      label: iOS version
+      placeholder: "iOS/iPadOS vX.Y.Z"
+    validations:
+      required: false
+  - type: markdown
+    attributes:
+      value: |
+        Thanks for taking the time to fill out this bug report!
