--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -7,7 +7,7 @@ body:
     attributes:
       label: Is there an existing issue for this?
       options:
-        - label: I have searched all open issues.
+        - label: I have searched all open issues
           required: true
   - type: textarea
     attributes:
@@ -24,6 +24,7 @@ body:
       options:
         - iPhone
         - iPad
+        - Both
     validations:
       required: true
   - type: input
