Minor edits to device drop down in bug report form

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -24,7 +24,7 @@ body:
       options:
         - iPhone
         - iPad
-        - Both
+        - iPhone and iPad
     validations:
       required: true
   - type: input
