--- a/.github/ISSUE_TEMPLATE/data_wikidata.yml
+++ b/.github/ISSUE_TEMPLATE/data_wikidata.yml
@@ -9,13 +9,6 @@ body:
       placeholder: List the related languages if applicable.
     validations:
       required: true
-  - type: input
-    id: word_type
-    attributes:
-      label: Word type
-      placeholder: Nouns, verbs, translations, adjectives, prepositions, etc.
-    validations:
-      required: true
   - type: dropdown
     id: browsers
     attributes:
@@ -25,14 +18,21 @@ body:
         - ETL (Wikidata to Scribe)
         - ELT (Add to Wikidata)
         - ETL and ELT
+    validations:
+      required: true
   - type: textarea
     id: choice
     attributes:
       label: Issue
-      description: You can search Wikidata for language data by putting `L:` at the start of a [search](https://www.wikidata.org/w/index.php?search=&search=&title=Special%3ASearch&go=Go)
       placeholder: Let us know what your idea is!
     validations:
       required: true
+  - type: markdown
+    attributes:
+      description: Including related Wikidata QIDs and PIDs would be very appreciated.
+  - type: markdown
+    attributes:
+      description: You can search Wikidata for language data by putting `L:` at the start of a [search](https://www.wikidata.org/w/index.php?search=&search=&title=Special%3ASearch&go=Go)
   - type: markdown
     attributes:
       value: |
