#101 shorten data issue template thank you

--- a/.github/ISSUE_TEMPLATE/data_wikidata.yml
+++ b/.github/ISSUE_TEMPLATE/data_wikidata.yml
@@ -38,4 +38,4 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thank you for supporting Scribe and [Wikidata](https://www.wikidata.org/) to create free information platforms!
+        Thank you for supporting free information platforms!
