--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -5,9 +5,11 @@ body:
   - type: checkboxes
     id: new-bug
     attributes:
-      label: Is there an existing issue for this?
+      label: Terms
       options:
         - label: I have searched all [open issues](https://github.com/scribe-org/Scribe-iOS/issues)
+          required: true
+        - label: I agree to follow Scribe-iOS' [Code of Conduct](https://github.com/scribe-org/Scribe-iOS/blob/main/.github/CODE_OF_CONDUCT.md)
           required: true
   - type: textarea
     attributes:
