#101 link to identifier descriptions in data template

--- a/.github/ISSUE_TEMPLATE/data_wikidata.yml
+++ b/.github/ISSUE_TEMPLATE/data_wikidata.yml
@@ -38,7 +38,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        - Including related Wikidata QIDs and PIDs would be very appreciated!
+        - Including related Wikidata [QIDs, PIDs and lexemes](https://www.wikidata.org/wiki/Wikidata:Identifiers) would be very appreciated!
   - type: markdown
     attributes:
       value: |
