#101 add an other option to data procedure dropdown

--- a/.github/ISSUE_TEMPLATE/data_wikidata.yml
+++ b/.github/ISSUE_TEMPLATE/data_wikidata.yml
@@ -26,6 +26,7 @@ body:
         - ETL (Wikidata to Scribe)
         - ELT (Add to Wikidata)
         - ETL and ELT
+        - Other or not sure
     validations:
       required: true
   - type: textarea
