#101 update data template desciption to highlight open-source

--- a/.github/ISSUE_TEMPLATE/data_wikidata.yml
+++ b/.github/ISSUE_TEMPLATE/data_wikidata.yml
@@ -1,5 +1,5 @@
 name: 🗃️ Data and Wikidata
-description: Help Scribe bring language data to your fingertips.
+description: Help Scribe bring open-source language data to your fingertips.
 labels: "data"
 body:
   - type: checkboxes
