--- a/.github/ISSUE_TEMPLATE/new_keyword.yml
+++ b/.github/ISSUE_TEMPLATE/new_keyword.yml
@@ -1,4 +1,4 @@
-name: globe_with_meridians New keyboard 
+name: 🌐 New keyboard 
 description: Help Scribe adding keyboard.
 labels: "-new keyboard-"
 body:
@@ -14,7 +14,7 @@ body:
   - type: textarea
     id: support
     attributes:
-      label: Describe what kind of support is needed
+      label: Describe what kind of support is needed ?
       placeholder: Explain the language a bit including why support is needed for certain word types, and tell us how Scribe can help people type in it.
     validations:
       required: true
@@ -22,7 +22,7 @@ body:
     id: data
     attributes:
       label: Data
-      placeholder: What Current amounts of data is present on Wikidata.
+      placeholder: What Current amounts of data is present on Wikidata ?
     validations:
       required: true
   - type: markdown
