--- a/.github/ISSUE_TEMPLATE/new_keyboard.yml
+++ b/.github/ISSUE_TEMPLATE/new_keyboard.yml
@@ -1,4 +1,4 @@
-name: 🌐 New keyboard 
+name: 🌐 New keyboard
 description: Suggest a new language keyboard for Scribe!
 labels: "new keyboard"
 title: Add <language> keyboard
@@ -13,22 +13,32 @@ body:
         - label: I agree to follow Scribe-iOS' [Code of Conduct](https://github.com/scribe-org/Scribe-iOS/blob/main/.github/CODE_OF_CONDUCT.md)
           required: true
         - label: This issue is about one language, and I've changed the title to reflect this.
-          required: true        - 
+          required: true
   - type: textarea
     id: support
     attributes:
-      label: Describe what kind of support is needed ?
-      placeholder: Explain the language a bit including why support is needed for certain word types, and tell us how Scribe can help people type in it.
+      label: Language support
+      placeholder: |
+        Tell us about the language and how Scribe can help people type in it.
+        Examples:
+          - The number of noun genders
+          - How verbs are conjugated (ex: like in "language")
+          - Preposition-case relationships
+          - Other grammar rules that are hard
     validations:
       required: true
   - type: input
     id: data
     attributes:
       label: Data
-      placeholder: What Current amounts of data is present on Wikidata ?
+      placeholder: X nouns, Y verbs, etc
     validations:
-      required: true
+      required: false
+  # - type: markdown
+  #   attributes:
+  #     value: |
+  #       - You can get this information by running [this query]() after choosing the language.
   - type: markdown
     attributes:
       value: |
-       Thanks for showing interest in bringing another language to Scribe! to Thanks for your interest in adding another Scribe keyboard!
+        Thanks for your interest in adding another Scribe keyboard!
