--- a/.github/ISSUE_TEMPLATE/new_keyboard.yml
+++ b/.github/ISSUE_TEMPLATE/new_keyboard.yml
@@ -12,17 +12,17 @@ body:
           required: true
         - label: I agree to follow Scribe-iOS' [Code of Conduct](https://github.com/scribe-org/Scribe-iOS/blob/main/.github/CODE_OF_CONDUCT.md)
           required: true
-        - label: This issue is about one language, and I've changed the title to reflect this.
+        - label: This issue is about one language, and I've changed the title to reflect this
           required: true
   - type: textarea
     id: support
     attributes:
       label: Language support
       placeholder: |
-        Tell us about the language and how Scribe can help people type in it.
+        Tell us about the language and how Scribe can help people with it.
         Examples:
           - The number of noun genders
-          - How verbs are conjugated (ex: like in "language")
+          - How verbs are conjugated
           - Preposition-case relationships
           - Other grammar rules that are hard
     validations:
