#101 add data check query and reference it in data issue template

--- a/.github/ISSUE_TEMPLATE/new_keyboard.yml
+++ b/.github/ISSUE_TEMPLATE/new_keyboard.yml
@@ -34,10 +34,18 @@ body:
       placeholder: X nouns, Y verbs, etc
     validations:
       required: false
-  # - type: markdown
-  #   attributes:
-  #     value: |
-  #       - You can get this information by running [this query]() after choosing the language.
+  - type: markdown
+    attributes:
+      value: |
+        - This information is appreciated and helps us know how much support we can offer for the language.
+  - type: markdown
+    attributes:
+      value: |
+        - You can get this information by running [Data/check_language_data.sparql](https://github.com/scribe-org/Scribe-iOS/blob/main/Data/check_language_data.sparql) at https://query.wikidata.org/.
+  - type: markdown
+    attributes:
+      value: |
+        - You'll need the QID of your language for the above query, which you can find on Wikidata by [searching for it](https://www.wikidata.org/w/index.php?search=%3Clanguage%3E&title=Special:Search&profile=advanced&fulltext=1&ns0=1&ns120=1).
   - type: markdown
     attributes:
       value: |
