--- a/.github/ISSUE_TEMPLATE/new_keyboard.yml
+++ b/.github/ISSUE_TEMPLATE/new_keyboard.yml
@@ -37,7 +37,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        - This information is appreciated and helps us know how much support we can offer for the language.
+        - This information is appreciated as it helps us know how much support we can offer for the language.
   - type: markdown
     attributes:
       value: |
