--- a/.github/ISSUE_TEMPLATE/new_keyboard.yml
+++ b/.github/ISSUE_TEMPLATE/new_keyboard.yml
@@ -30,14 +30,14 @@ body:
   - type: input
     id: data
     attributes:
-      label: Data
+      label: Available data
       placeholder: X nouns, Y verbs, etc
     validations:
       required: false
   - type: markdown
     attributes:
       value: |
-        - This information is appreciated as it helps us know how much support we can offer for the language.
+        - This information is appreciated as it helps us know how much support we can offer for the language. Feel free to leave this blank and we'll do it for you :)
   - type: markdown
     attributes:
       value: |
