--- a/.github/ISSUE_TEMPLATE/data_wikidata.yml
+++ b/.github/ISSUE_TEMPLATE/data_wikidata.yml
@@ -7,7 +7,7 @@ body:
     attributes:
       label: Terms
       options:
-        - label: I have searched [open and closed issues](https://github.com/scribe-org/Scribe-iOS/issues?q=is%3Aissue)
+        - label: I have searched [open and closed data issues](https://github.com/scribe-org/Scribe-iOS/issues?q=is%3Aissue+label%3Adata+)
           required: true
         - label: I agree to follow Scribe-iOS' [Code of Conduct](https://github.com/scribe-org/Scribe-iOS/blob/main/.github/CODE_OF_CONDUCT.md)
           required: true
