--- a/.github/ISSUE_TEMPLATE/new_keyboard.yml
+++ b/.github/ISSUE_TEMPLATE/new_keyboard.yml
@@ -8,7 +8,7 @@ body:
     attributes:
       label: Terms
       options:
-        - label: I have searched [open issues](https://github.com/scribe-org/Scribe-iOS/issues?q=is%3Aissue)
+        - label: I have searched [open keyboard issues](https://github.com/scribe-org/Scribe-iOS/issues?q=is%3Aopen+is%3Aissue+label%3A%22new+keyboard%22)
           required: true
         - label: I agree to follow Scribe-iOS' [Code of Conduct](https://github.com/scribe-org/Scribe-iOS/blob/main/.github/CODE_OF_CONDUCT.md)
           required: true
