--- a/.github/ISSUE_TEMPLATE/new_keyboard.yml
+++ b/.github/ISSUE_TEMPLATE/new_keyboard.yml
@@ -27,24 +27,24 @@ body:
           - Other grammar rules that are hard
     validations:
       required: true
-  - type: input
-    id: data
-    attributes:
-      label: Available data
-      description: |
-        This information is appreciated as it helps us know how much support we can offer for the language.
-        Feel free to leave this blank and we'll do it for you :)
-      placeholder: X nouns, Y verbs, etc
-    validations:
-      required: false
-  - type: markdown
-    attributes:
-      value: |
-        - You can get this information by running [Data/check_language_data.sparql](https://github.com/scribe-org/Scribe-iOS/blob/main/Data/check_language_data.sparql) at https://query.wikidata.org/.
-  - type: markdown
-    attributes:
-      value: |
-        - You'll need the QID of your language for the above query, which you can find on Wikidata by [searching for it](https://www.wikidata.org/w/index.php?search=%3Clanguage%3E&title=Special:Search&profile=advanced&fulltext=1&ns0=1&ns120=1).
+  # - type: input
+  #   id: data
+  #   attributes:
+  #     label: Available data
+  #     description: |
+  #       This information is appreciated as it helps us know how much support we can offer for the language.
+  #       Feel free to leave this blank and we'll do it for you :)
+  #     placeholder: X nouns, Y verbs, etc
+  #   validations:
+  #     required: false
+  # - type: markdown
+  #   attributes:
+  #     value: |
+  #       - You can get this information by running [Data/check_language_data.sparql](https://github.com/scribe-org/Scribe-iOS/blob/main/Data/check_language_data.sparql) at https://query.wikidata.org/.
+  # - type: markdown
+  #   attributes:
+  #     value: |
+  #       - You'll need the QID of your language for the above query, which you can find on Wikidata by [searching for it](https://www.wikidata.org/w/index.php?search=%3Clanguage%3E&title=Special:Search&profile=advanced&fulltext=1&ns0=1&ns120=1).
   - type: markdown
     attributes:
       value: |
