Change new keyboard emoji to a keyboard

--- a/.github/ISSUE_TEMPLATE/new_keyboard.yml
+++ b/.github/ISSUE_TEMPLATE/new_keyboard.yml
@@ -1,4 +1,4 @@
-name: 🌐 New keyboard
+name: ⌨️ New keyboard
 description: Suggest a new language keyboard for Scribe!
 labels: "new keyboard"
 title: Add <language> keyboard
