--- a/.github/ISSUE_TEMPLATE/localization.yml
+++ b/.github/ISSUE_TEMPLATE/localization.yml
@@ -1,5 +1,5 @@
 name: 🌐 Localization
-description: Want to localise or discuss about localization across a region?
+description: Report issues or offer to help for Scribe localization.
 labels: "localization"
 body:
   - type: checkboxes
@@ -7,26 +7,19 @@ body:
     attributes:
       label: Terms
       options:
-        - label: I have searched [open and closed issues](https://github.com/scribe-org/Scribe-iOS/issues?q=is%3Aissue)
+        - label: I have searched [open localization issues](https://github.com/scribe-org/Scribe-iOS/issues?q=is%3Aissue+is%3Aopen+label%3Alocalization)
           required: true
         - label: I agree to follow Scribe-iOS' [Code of Conduct](https://github.com/scribe-org/Scribe-iOS/blob/main/.github/CODE_OF_CONDUCT.md)
           required: true
   - type: textarea
     id: support
     attributes:
-      label: Localization support
+      label: Description
       placeholder: |
-        Tell us how you can help Scribe adding localization.
+        Tell us where Scribe needs localization support, and let us know if you're able to help!
     validations:
-      required: true        
-  - type: textarea
-    id: contribution
-    attributes:
-      label: Contribution
-      placeholder: Let us know if you'd like to help and how :)
-    validations:
-      required: false
+      required: true
   - type: markdown
     attributes:
       value: |
-        Thanks for your interest in adding another localization to Scribe!
+        Thanks for your efforts to bring Scribe to other languages!
