--- a/.github/ISSUE_TEMPLATE/new_keyboard.yml
+++ b/.github/ISSUE_TEMPLATE/new_keyboard.yml
@@ -1,6 +1,6 @@
 name: ⌨️ New keyboard
 description: Suggest a new language keyboard for Scribe!
-labels: "new keyboard"
+labels: ["new keyboard"]
 title: Add <language> keyboard
 body:
   - type: checkboxes
