--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -31,7 +31,7 @@ body:
   - type: input
     id: version
     attributes:
-      label: versions
+      label: Versions
       placeholder: "What are the OS and Scribe versions?"
     validations:
       required: false
