--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 ## Xcode Files
 project.xcworkspace
+xcshareddata/
 xcuserdata/
 
 ## Compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
