--- a/Scribe.xcodeproj/xcshareddata/xcschemes/French.xcscheme
+++ b/Scribe.xcodeproj/xcshareddata/xcschemes/French.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D109A20A275B6888005E2271"
-               BuildableName = "French.appex"
-               BlueprintName = "French"
+               BuildableName = "French-AZERTY.appex"
+               BlueprintName = "French-AZERTY"
                ReferencedContainer = "container:Scribe.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
