#261 json for video and images texts in spanish

--- a/AppStore/English/Text/AppStoreImgVidTexts.json
+++ b/AppStore/English/Text/AppStoreImgVidTexts.json
@@ -17,7 +17,7 @@
   "image_5_subtext": "No network required",
   "image_6_header": "iPhone and iPad",
   "image_6_subtext": "With no data collected",
-  "image_7_header": "Open Data",
+  "image_7_header": "Open Source",
   "image_7_footer": "Open Data",
   "image_7_subtext": "from Wikimedia"
 }
