#264 add files for video header generation

--- a/AppStore/English/Texts/AppStoreImgVidTexts.json
+++ b/AppStore/English/Texts/AppStoreImgVidTexts.json
@@ -1,21 +1,22 @@
 {
   "app_slogan": "Communicate with Confidence",
+  "install": "Install Today",
   "vid_1_header": "Second Language Keyboards",
   "vid_2_header": "Including...",
   "vid_3_header": "Noun Genders and Cases",
   "vid_4_header": "Translate and Plurals",
   "vid_5_header": "Verb Forms Too",
-  "image_1_header": "Noun Genders",
+  "image_1_footer": "Noun Genders",
   "image_1_subtext": "Feminine, masculine, neutral ...",
-  "image_2_header": "Translation",
+  "image_2_footer": "Translation",
   "image_2_subtext": "English to keyboard language",
-  "image_3_header": "Verb Conjugation",
+  "image_3_footer": "Verb Conjugation",
   "image_3_subtext": "In-keyboard dictionary",
-  "image_4_header": "Seven Languages",
+  "image_4_footer": "Seven Languages",
   "image_4_subtext": "And more to come!",
-  "image_5_header": "Anytime",
+  "image_5_footer": "Anytime",
   "image_5_subtext": "No network required",
-  "image_6_header": "iPhone and iPad",
+  "image_6_footer": "iPhone and iPad",
   "image_6_subtext": "With no data collected",
   "image_7_header": "Open Source",
   "image_7_footer": "Open Data",
