--- a/AppStore/Spanish/Texts/AppStoreImgVidTexts.json
+++ b/AppStore/Spanish/Texts/AppStoreImgVidTexts.json
@@ -1,21 +1,22 @@
 {
   "app_slogan": "Comunícate con seguridad",
+  "install": "Instála Hoy",
   "vid_1_header": "Teclados en otros idiomas",
   "vid_2_header": "Incluyendo...",
   "vid_3_header": "Género de sustantivos y Casos",
   "vid_4_header": "Traductor y Plurales",
   "vid_5_header": "También, conjugación de verbos",
-  "image_1_header": "Género de sustativos",
+  "image_1_footer": "Género de sustativos",
   "image_1_subtext": "Femenino, masculino, neutro ...",
-  "image_2_header": "Traducción",
+  "image_2_footer": "Traducción",
   "image_2_subtext": "Inglés al lenguaje del teclado",
-  "image_3_header": "Conjugación de verbos",
+  "image_3_footer": "Conjugación de verbos",
   "image_3_subtext": "Diccionario dentro del teclado",
-  "image_4_header": "Siete idiomas",
+  "image_4_footer": "Siete idiomas",
   "image_4_subtext": "y más por venir!",
-  "image_5_header": "En cualquier momento",
+  "image_5_footer": "En cualquier momento",
   "image_5_subtext": "No requiere conexión a Internet",
-  "image_6_header": "iPhone y iPad",
+  "image_6_footer": "iPhone y iPad",
   "image_6_subtext": "No colecta tus datos",
   "image_7_header": "Código abierto",
   "image_7_footer": "Datos de libre acceso",
