#134 correct Hebrew two letter iso code

--- a/Keyboards/LanguageKeyboards/Hebrew/Info.plist
+++ b/Keyboards/LanguageKeyboards/Hebrew/Info.plist
@@ -29,7 +29,7 @@
 			<key>PrefersRightToLeft</key>
 			<false/>
 			<key>PrimaryLanguage</key>
-			<string>iw</string>
+			<string>he</string>
 			<key>RequestsOpenAccess</key>
 			<false/>
 		</dict>
