--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,7 @@
 name: 🐞 Bug report
 description: Report a bug to help us improve Scribe-iOS.
 labels: ["bug"]
-projects: ["projects/1"]
+projects: ["orgs/scribe-org/projects/1"]
 body:
   - type: checkboxes
     id: new-bug
