fix: adding project board automation to all templates

--- a/.github/ISSUE_TEMPLATE/localization.yml
+++ b/.github/ISSUE_TEMPLATE/localization.yml
@@ -1,6 +1,7 @@
 name: 🌐 Localization
 description: Report issues or offer help for Scribe localizations.
 labels: ["localization"]
+projects: ["scribe-org/1"]
 body:
   - type: checkboxes
     id: terms
