--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,7 @@
 name: ✨ Feature request
 description: Have a new idea or feature for Scribe-iOS? Please suggest!
 labels: ["feature"]
+projects: ["scribe-org/1"]
 body:
   - type: checkboxes
     id: terms
