--- a/.github/workflows/pr_swift_lint.yaml
+++ b/.github/workflows/pr_swift_lint.yaml
@@ -1,11 +1,19 @@
-name: pr_swift_lint
+
+# Lints the project using SwiftLint
+
+name: SwiftLint
+
 on:
   push:
-    branches: [main]
-  pull_request:
     branches:
-      - main
-    types: [opened, reopened, synchronize]
+      - master
+      - develop
+  pull_request:
+    types: [synchronize, opened, reopened, ready_for_review]
+    branches:
+      - master
+      - develop
+
 
 jobs:
   swift_format_check:
@@ -31,11 +39,11 @@ jobs:
         run: brew install swiftformat
 
       - name: Run SwiftLint
-        run: swiftlint
-
-      - name: Run SwiftFormat (check only)
-        run: swiftformat --lint .
-
-      - name: Run SwiftFormat
-        if: always()
-        run: swiftformat .
+        run: |
+          swiftlint lint --config /Scribe-iOS/.github/workflows.swiftlint.yaml
+          if [ $result -eq 0 ] || [ $result -eq 1 ]; then
+              echo "SwiftLint passed with no errors."
+          else
+              echo "SwiftLint failed with errors."
+              exit 1
+          fi
