--- a/.github/workflows/pr_swift_lint.yaml
+++ b/.github/workflows/pr_swift_lint.yaml
@@ -1,11 +1,10 @@
 name: pr_swift_lint
 on:
-  push:
-    branches: [main]
-  pull_request:
+  pull_request_target:
     branches:
       - main
-    types: [opened, reopened, synchronize]
+    types:
+      - opened
 
 jobs:
   swift_format_check:
