--- a/.github/workflows/pr_swift_lint.yaml
+++ b/.github/workflows/pr_swift_lint.yaml
@@ -31,4 +31,5 @@ jobs:
 
       - name: Run SwiftLint
         run: |
+          pwd
           swiftlint lint --config /Scribe-iOS/.github/workflows/.swiftlint.yaml
