--- a/.github/workflows/pr_swift_lint.yaml
+++ b/.github/workflows/pr_swift_lint.yaml
@@ -31,5 +31,5 @@ jobs:
 
       - name: Run SwiftLint
         run: |
-          pwd
-          swiftlint lint --config /Scribe-iOS/.github/workflows/.swiftlint.yaml
+          
+          swiftlint lint --config /Users/runner/work/Scribe-iOS/Scribe-iOS/.github/workflows/.swiftlint.yaml
