--- a/.github/workflows/pr_swift_lint.yaml
+++ b/.github/workflows/pr_swift_lint.yaml
@@ -34,6 +34,10 @@ jobs:
         run: swiftlint lint --config /Users/runner/work/Scribe-iOS/Scribe-iOS/.github/workflows/.swiftlint.yaml
         continue-on-error: true 
 
+      - name: Learning outcome and conclusion results
+          run: echo steps.lint.outcome
+          run: echo steps.lint.conclusion
+      
       - name: Check for warnings
         if: ${{ steps.lint.outcome == 'failure' && steps.lint.conclusion != 'failure' }}
         run: echo "SwiftLint warnings detected"
