--- a/.github/workflows/pr_swift_lint.yaml
+++ b/.github/workflows/pr_swift_lint.yaml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run SwiftLint
         id: lint
-        run: swiftlint lint --config /Users/runner/work/Scribe-iOS/Scribe-iOS/.github/workflows/.swiftlint.yaml; echo steps.lint.outcome; echo steps.lint.conclusion
+        run: swiftlint lint --config /Users/runner/work/Scribe-iOS/Scribe-iOS/.github/workflows/.swiftlint.yaml; echo "Outcome: ${{ steps.lint.outcome }}"; echo "Conclusion: ${{ steps.lint.conclusion }}"
         continue-on-error: true 
       
       - name: Check for warnings
