--- a/.github/workflows/pr_swift_lint.yaml
+++ b/.github/workflows/pr_swift_lint.yaml
@@ -31,8 +31,13 @@ jobs:
 
       - name: Run SwiftLint
         id: lint
-        run: swiftlint lint --config /Users/runner/work/Scribe-iOS/Scribe-iOS/.github/workflows/.swiftlint.yaml; echo "Outcome: ${{ steps.lint.outcome }}"; echo "Conclusion: ${{ steps.lint.conclusion }}"
+        run: swiftlint lint --config /Users/runner/work/Scribe-iOS/Scribe-iOS/.github/workflows/.swiftlint.yaml
         continue-on-error: true 
+
+      - name: Print lint outcomes and conclusions
+        run: |
+          echo "Outcome: ${{ steps.lint.outcome }}"
+          echo "Conclusion: ${{ steps.lint.conclusion }}"
       
       - name: Check for warnings
         if: ${{ steps.lint.outcome == 'failure' && steps.lint.conclusion != 'failure' }}
