--- a/.github/workflows/.swiftlint.yaml
+++ b/.github/workflows/.swiftlint.yaml
@@ -8,7 +8,7 @@ disabled_rules: # rule identifiers to exclude from running
   - force_try
   - line_length
   - file_length
-  # - type_body_length
+  - type_body_length
 
 
 
